# 14-paper-reproducibility-kit

./: .env.production.example  .gitignore  AGENTS.md  CITATION.cff  Dockerfile  LICENSE  Makefile  README.md  docker-compose.repro.yml  fly.toml  pyproject.toml  reproducibility.yaml  requirements.txt
.github/workflows/: ci.yml  generate-artifacts.yml  run-paper-tests.yml  security-scan.yml  validate-reproducibility.yml
artifacts/: README.md  artifact-index.yaml
artifacts/security/: control-catalog.yaml  threat-model-summary.md
data/: beso_upright_stages.json
datasets/: README.md  dataset-index.yaml
docs/: experiment-to-paper-mapping.md  reproducibility-guidelines.md
experiments/: README.md  experiment-index.yaml
paper/: abstract.tex  main.tex  references.bib
paper/style/: macros.tex  (+1 more)
reproducibility/: artifact-checklist.md  checksums.sha256  computational-environment.md  docker-reproduction.md  expected-outputs.md  experiment-protocol.md  kubernetes-reproduction.md  metrics-definition.md  reproducibility-protocol.md
review-package/: README.md  artifact-evaluation-checklist.md  full-reproduction.md  minimal-reproduction.md  reviewer-guide.md
scripts/: compute-checksums.py  export-paper-package.sh  generate-figures.py  generate-synthetic-telemetry.py  generate-tables.py  reproduce-all.sh  validate-artifacts.py  validate-reproducibility.py
tests/: test_artifact_index.py  test_checksums.py  test_dataset_cards.py  test_experiment_index.py  test_latex_files_exist.py  test_no_sensitive_data.py  test_reproducibility_yaml.py  test_tables_have_sources.py
(+56 files in other folders)
