[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-kit"
version = "0.1.0"
description = "Utilities for the KDD agentic race engineering paper reproducibility kit"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "matplotlib>=3.8.0",
    "pyyaml>=6.0.1",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "jupyter>=1.0.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
